--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,7 @@
     <div>
         <h2>Video Feed</h2>
         <img id="video" src="{{ url_for('video_feed', filter_type='none') }}" width="640" height="480">
+        <video id="videoElement" autoplay playsinline></video>
     </div>
     <div>
         <h2>Capture Image</h2>
